init: Change ownership of wifi firmware reload sysfs paths
Change-Id: If39a865e9851f416a2e4933c97a8774a1e1406f8

--- a/rootdir/etc/init.g3.rc
+++ b/rootdir/etc/init.g3.rc
@@ -251,6 +251,9 @@ on boot
     # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
+    # Wifi firmware reload path
+    chown wifi wifi /sys/module/wlan/parameters/fwpath
+
     write /sys/module/lowmemorykiller/parameters/lmk_fast_run 0
 
     chown system system /sys/class/leds/red/pattern_id
